--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
 language: php
 php:
-  - 5.6
   - 7.0
   - 7.1
-  - hhvm
 install: composer install
 script:
   - ./vendor/bin/phpunit --coverage-clover clover.xml
-after_success: sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then ./vendor/bin/coveralls -v; fi'
-matrix:
-  fast_finish: true
-  allow_failures:
-     - php: hhvm
+after_success: ./vendor/bin/coveralls -v
